--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,22 +31,8 @@ jobs:
         with:
           arguments: genSources build
 
-      - name: Upload artifact
-        run: |
-          function gradleprop {
-              grep "${1}" gradle.properties|cut -d'=' -f2
-          }
-          export LB_VERSION=$(gradleprop 'mod_version')
-          export MINECRAFT_VERSION=$(gradleprop 'minecraft_version')
-          export LOADER_VERSION=$(gradleprop 'loader_version')
-          export FABRICAPI_VERSION=$(gradleprop 'fabric_version')
-          export KOTLIN_VERSION=$(gradleprop 'kotlin_version')
-          export FABRIC_KOTLIN_VERSION=$(gradleprop 'fabric_kotlin_version')
-          echo Version: $LB_VERSION, Minecraft: $MINECRAFT_VERSION
-          cd build/libs
-          export JAR=$(find . -regex '.*liquidbounce-[0-9|.]*\.jar')
-          cp $JAR zip/liquidbounce.jar
-          cd zip
-          zip -r liquidbounce.zip *
-          md5sum liquidbounce.zip
-          curl --connect-timeout 30 -m 300 -X POST -F "artifact=@liquidbounce.zip" -H "Authorization: ${{ secrets.NIGHTLY_PASS }}" -F "gh_id=${{ github.event.head_commit.id }}" -F "gh_ref=${{ github.ref }}" -F "gh_message=${{ github.event.head_commit.message }}" -F "gh_timestamp=${{ github.event.head_commit.timestamp }}" -F "lb_version=$LB_VERSION" -F "mc_version=$MINECRAFT_VERSION" -F "subsystem=fabric" -F "fabric_loader_version=$LOADER_VERSION" -F "fabric_api_version=$FABRICAPI_VERSION" -F "kotlin_version=$KOTLIN_VERSION" -F "fabric_kotlin_version=$FABRIC_KOTLIN_VERSION" https://api.liquidbounce.net/api/v1/version/new
+      - name: Output artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: build/libs
